<!--

    Copyright (c) 2011-2021, JFXtras
    All rights reserved.

    Redistribution and use in source and binary forms, with or without
    modification, are permitted provided that the following conditions are met:
       Redistributions of source code must retain the above copyright
          notice, this list of conditions and the following disclaimer.
       Redistributions in binary form must reproduce the above copyright
          notice, this list of conditions and the following disclaimer in the
          documentation and/or other materials provided with the distribution.
       Neither the name of the organization nor the
          names of its contributors may be used to endorse or promote products
          derived from this software without specific prior written permission.

    THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
    ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
    WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
    DISCLAIMED. IN NO EVENT SHALL JFXTRAS BE LIABLE FOR ANY
    DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
    (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
    LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
    ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
    (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
    SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.jfxtras</groupId>
	<artifactId>jfxtras-parent</artifactId>
	<packaging>pom</packaging>
	<version>17-r2-SNAPSHOT</version>
	<name>JFXtras parent</name>
	<description>Miscellaneous components for JavaFX</description>
	<url>http://jfxtras.org/</url>
	<licenses>
		<license>
			<name>BSD</name>
			<url>http://www.opensource.org/licenses/bsd-license.php</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<scm>
		<url>https://github.com/jfxtras/jfxtras.git</url>
		<connection>scm:git:https://git@github.com/jfxtras/jfxtras.git</connection>
		<developerConnection>scm:git:https://git@github.com/jfxtras/jfxtras.git</developerConnection>
	  <tag>HEAD</tag>
  </scm>
	<developers>
		<developer>
			<name>Tom Eugelink</name>
		</developer>
	</developers>
	<distributionManagement>
		<snapshotRepository>
			<id>sonatype</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>sonatype</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
		</repository>
	</distributionManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>17</java.version>
		<openjfx.version>17.0.10</openjfx.version>
		<maven.compiler.release>${java.version}</maven.compiler.release>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
	</properties>

	<modules>
		<module>jfxtras-agenda</module>
		<module>jfxtras-common</module>
		<module>jfxtras-controls</module>
		<module>jfxtras-font-roboto</module>
		<module>jfxtras-fxml</module>
		<module>jfxtras-gauge-linear</module>
		<module>jfxtras-icalendaragenda</module>
		<module>jfxtras-icalendarfx</module>
		<module>jfxtras-menu</module>
		<module>jfxtras-window</module>
		<module>jfxtras-test-support</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-base</artifactId>
				<version>${openjfx.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-controls</artifactId>
				<version>${openjfx.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-fxml</artifactId>
				<version>${openjfx.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-graphics</artifactId>
				<version>${openjfx.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-media</artifactId>
				<version>${openjfx.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-swing</artifactId>
				<version>${openjfx.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-web</artifactId>
				<version>${openjfx.version}</version>
				<scope>provided</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.0.0-M5</version>
					<dependencies>
						<dependency>
							<groupId>org.ow2.asm</groupId>
							<artifactId>asm</artifactId>
							<version>7.2</version>
						</dependency>
					</dependencies>
				</plugin>

				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>com.mycila</groupId>
										<artifactId>
											license-maven-plugin
										</artifactId>
										<versionRange>
											[3.0,)
										</versionRange>
										<goals>
											<goal>format</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.codehaus.mojo
										</groupId>
										<artifactId>
											build-helper-maven-plugin
										</artifactId>
										<versionRange>
											[1.12,)
										</versionRange>
										<goals>
											<goal>
												timestamp-property
											</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>1.12</version>
				<executions>
					<execution>
						<id>timestamp-property</id>
						<goals>
							<goal>timestamp-property</goal>
						</goals>
						<phase>validate</phase>
						<configuration>
							<locale>en_US</locale>
							<name>year</name>
							<pattern>yyyy</pattern>
						</configuration>
					</execution>
				</executions>
			</plugin>
			
			<!-- add license header to files http://mycila.mathieu.photography/license-maven-plugin/ -->
			<plugin>
				<groupId>com.mycila</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<header>${maven.multiModuleProjectDirectory}/license-template.txt</header>
					<properties>
						<year>${year}</year>
					</properties>
					<excludes>					
						<exclude>**/pom.xml.versionsBackup</exclude>
						<exclude>**/*.cmd</exclude>
						<exclude>**/*.adoc</exclude>
						<exclude>**/*.fxml</exclude>
						<exclude>**/README</exclude>
						<exclude>src/test/resources/**</exclude>
						<exclude>src/main/resources/**</exclude>
					</excludes>
				</configuration>
				<executions>
					<execution>
						<phase>generate-sources</phase>
						<goals>
							<goal>format</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- attach source -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
    
			<!-- sign the jars files, all the additional information is set in ~/.m2/settings.xml -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>1.6</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>deploy</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			
			<!-- deploy using the special nexus-staging deploy plugin -->
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.7</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>sonatype</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>

			<!-- release plugin handles validation and versioning, use release:prepare
				and release:perform -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.3</version>
				<configuration>
					<tagNameFormat>r@{project.version}</tagNameFormat>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<releaseProfiles>releases</releaseProfiles>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>sources-as-javadoc-jar</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-jar-plugin</artifactId>
						<version>3.2.0</version>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>jar</goal>
								</goals>
								<configuration>
									<classifier>javadoc</classifier>
									<classesDirectory>${basedir}/src/main/java</classesDirectory>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>asciidoc</id>
			<build>
				<plugins>
					<!-- generate Javadoc files using Asciidoclet -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.2.0</version>
						<configuration>
							<sourceFileExcludes>
								<exclude>module-info.java</exclude>
							</sourceFileExcludes>
							<doclet>org.asciidoctor.asciidoclet.Asciidoclet</doclet>
							<!-- use docletPath until asciidoclet is compatible with Java 11  https://github.com/asciidoctor/asciidoclet/pull/96 -->
<!--                            <docletArtifact>-->
<!--                                <groupId>org.asciidoctor</groupId>-->
<!--                                <artifactId>asciidoclet</artifactId>-->
<!--                                <version>2.x.x</version>-->
<!--                            </docletArtifact>-->

							<!--                            https://github.com/UniKnow/AsciiDoclet-->
							<!--                            <docletPath>${maven.multiModuleProjectDirectory}/lib/asciidoclet-2.1.0-shaded.jar</docletPath>-->
							<docletArtifact>
								<groupId>org.uniknow</groupId>
								<artifactId>asciidoclet</artifactId>
								<version>2.2.1</version>
							</docletArtifact>

<!--                            https://github.com/chrisvest/asciidoclet/releases/tag/2.0.0-->
<!--                            <docletPath>${maven.multiModuleProjectDirectory}/lib/asciidoclet-2.0.0-shaded.jar</docletPath>-->

							<additionalJOptions>
								<additionalJOption>-J--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</additionalJOption>
								<additionalJOption>-Xdoclint:none</additionalJOption>
							</additionalJOptions>
							<additionalOptions>
								<additionalOption>--base-dir ${project.basedir}</additionalOption>
								<additionalOption>--attribute "name=${project.name}"</additionalOption>
								<additionalOption>--attribute "version=${project.version}"</additionalOption>
								<additionalOption>--attribute "title-link=http://jfxtras.com[${project.name} ${project.version}]"</additionalOption>
							</additionalOptions>
						</configuration>
					</plugin>
				</plugins>
			</build>

		</profile>
	</profiles>
</project>
